--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@ body {
   overflow-x: hidden;
   font-size: 16px;
   line-height: 1.6;
-  background-color: #f8f8f8;
+  background-color: #f8f8f8 !important;
 }
 
 .listul ul {
@@ -48,6 +48,10 @@ body {
 .room-details-slider-nav .slick-slide {
   padding: 1px
 }
+
+/* .room-slider .slick-slide {
+  padding: 0 15px;
+} */
 
 .sticky-active .site-logo img {
   max-width: 99px !important;
@@ -957,9 +961,7 @@ header.header-three .main-menu-area.sticky-header.sticky-active .nav-container {
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.04);
 }
 
-header.header-three .main-menu-area.sticky-header.sticky-active .nav-container .menu-items ul li a {
-  line-height: 100px;
-}
+
 
 /* Header Top */
 header.header-three .header-top {
@@ -1573,54 +1575,6 @@ body.mobile-menu-open {
   }
 }
 
-/* Animation classes */
-.fadeInDown {
-  animation: fadeInDown 0.8s ease-out forwards;
-}
-
-.fadeInLeft {
-  animation: fadeInLeft 0.8s ease-out forwards;
-}
-
-.fadeInUp {
-  animation: fadeInUp 0.8s ease-out forwards;
-}
-
-@keyframes fadeInDown {
-  from {
-    opacity: 0;
-    transform: translateY(-30px);
-  }
-
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-@keyframes fadeInLeft {
-  from {
-    opacity: 0;
-    transform: translateX(-30px);
-  }
-
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-@keyframes fadeInUp {
-  from {
-    opacity: 0;
-    transform: translateY(30px);
-  }
-
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
 
 /* Responsive */
 @media only screen and (min-width: 1200px) and (max-width: 1599px) {
@@ -2159,7 +2113,7 @@ body.mobile-menu-open {
 
 .about-section .about-features-boxes .single-feature-box.only-bg {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   -webkit-box-shadow: none;
   box-shadow: none;
   min-height: 315px;
@@ -3315,11 +3269,6 @@ body.mobile-menu-open {
   transition: all 0.3s ease-out 0s;
 }
 
-.room-slider .rooms-content-wrap .room-content-box .room-content-slider .slick-dots li button:before {
-  content: '';
-  display: none;
-}
-
 .testimonial-slider ul.slick-dots li.slick-active button {
   width: 26px;
   background-color: #87847b;
@@ -3970,12 +3919,18 @@ body.mobile-menu-open {
   width: 16px;
   height: 4px;
   margin: 0 5px;
+  padding: 0px;
   -webkit-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s;
 }
 
+.room-slider .rooms-content-wrap .room-content-box .room-content-slider .slick-dots li button:before {
+  content: '';
+  display: none;
+}
+
 .room-slider .rooms-content-wrap .room-content-box .room-content-slider ul.slick-dots li.slick-active button {
-  width: 50px;
+  width: 20px;
   background-color: #87847b;
 }
 
@@ -4156,6 +4111,12 @@ body.mobile-menu-open {
 .room-slider .rooms-slider-two .slick-current .single-rooms-box .icons {
   visibility: visible;
   opacity: 1;
+}
+
+/* Veya daha spesifik olarak */
+.room-slider .rooms-slider-two .slick-slide .col-lg-6 {
+  max-width: none !important;
+  flex: none !important;
 }
 
 .room-slider .rooms-slider-two .slick-arrow {
@@ -4676,15 +4637,6 @@ body.mobile-menu-open {
   animation: fadeIn 0.3s ease;
 }
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
 
 .lightbox-container {
   position: relative;
