--- a/src/styles/components/banner.css
+++ b/src/styles/components/banner.css
@@ -36,7 +36,7 @@
     justify-content: flex-end;
 }
 
-.image-wrapper {
+.banner-section .image-wrapper {
     width: 100%;
     height: 100%;
     border-radius: 0 50% 50% 0;
